--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,7 @@
   "parserOptions": {
     "ecmaVersion": "latest"
   },
-  "rules": {}
+  "rules": {
+    "no-underscore-dangle": ["error", {"allow": ["_id"]}]
+  }
 }
