--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "mongoose": "^6.4.0"
   }
 }
