--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "nodemon": "^2.0.18"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
-    "mongoose": "^6.4.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.0",
+    "validator": "^13.7.0"
   }
 }
